# gameOne

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.bak  ProjectGamma.opensdf  ProjectGamma.sln  README.md  cmake_install.cmake  main.cpp  makefile  readme.txt
CastleOfTheWinds/: CastleOfTheWinds.vcxproj  CastleOfTheWinds.vcxproj.filters  CotWErrorLog.txt  core.cpp  core.h  gameScreen.cpp  gameScreen.h  main.cpp  screen.h  shell.cpp  shell.h  textFileParser.cpp
CastleOfTheWinds/Debug/: vc120.idb
CastleOfTheWinds/Debug/CastleOfTheWinds.tlog/: CL.read.1.tlog  CL.write.1.tlog  CastleOfTheWinds.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CastleOfTheWinds/include/: cleanup.h  core.h  jpfSDLTexture.h  logSDLError.h  res_path.h  shell.h  textFileParser.h
CastleOfTheWinds/misc/: scratchpad.txt
Debug/: CastleOfTheWinds.ilk  sdlTest
lib/original/gamePackage/Castle_of_the_Winds_part_1_shareware/: HELPME.DOC  VENDOR.DOC
res/: cotwsprites02.xcf  protag.xcf
res/original/gamePackage/Castle of the Winds part 1 - shareware/: CHANGES.DOC  test2.cwg
res/original/gamePackage/Castle_of_the_Winds_part_1_shareware/: CASTLE.INI
res/originalGame/Castle_of_the_Winds_part_1_shareware/: CASTLE.INI  FILE_ID.DIZ  partA_finished.cwg
res/originalGame/Castle_of_the_Winds_part_2_freeware/: CASTLE.INI
src/: main.cpp  res_path.h
